Deferred language-skill items implemented; four verifications settled